system/postgres/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: system
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          # resources:
          #   requests:
          #     cpu: 37m
          #     memory: 768Mi
          #   limits:
          #     memory: 768Mi
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/postgresql/data
            - name: init-db
              mountPath: /docker-entrypoint-initdb.d
      securityContext:
        fsGroup: 26
      serviceAccount: postgres
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-db
          configMap:
            name: postgres-db-config
            defaultMode: 0555
