system/postgres/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  # namespace: system
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
