system/postgres/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - monitoring
                  - system
      ports:
        - protocol: TCP
          port: 5432
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
